--- a/src/app/header-component/header-component.component.html
+++ b/src/app/header-component/header-component.component.html
@@ -1,11 +1,15 @@
-<ul ngbNav [(activeId)]="activeId" class="nav-tabs">
-    <li [ngbNavItem]="1">
-      <a ngbNavLink>Home</a>
+<ul ngbNav #nav="ngbNav" class="nav-tabs">
+    <li ngbNavItem id="brand">
+        <a ngbNavLink>BrandName</a>
+    </li>     
+    <li ngbNavItem>
+        <a ngbNavLink>Home</a>
     </li>
-    <li [ngbNavItem]="2">
-      <a ngbNavLink>Products</a>
-    </li>
-    <li [ngbNavItem]="3">
-        <a ngbNavLink>Contact</a>
-      </li>
-  </ul>
+  <li ngbNavItem>
+    <a ngbNavLink>Products</a>
+  </li>
+  <li ngbNavItem>
+    <a ngbNavLink>Contact</a>
+  </li>
+</ul>
+<div [ngbNavOutlet]="nav"></div>
