--- a/src/app/product-component/product-component.component.html
+++ b/src/app/product-component/product-component.component.html
@@ -1,1 +1,29 @@
-<p>product-component works!</p>
+<div class="row">
+    <div class="col-sm-3">
+      <div class="card">
+        <img class="card-img-top" src="https://www.cancer.org/content/dam/cancer-org/images/photographs/single-use/espresso-coffee-cup-with-beans-on-table-restricted.jpg/jcr:content/renditions/cq5dam.web.1280.1280.jpeg" alt="Card image cap">
+        <div class="card-body">
+          <h2 class="card-title">Product 1</h2>
+          <p class="card-text">With supporting text below as a natural lead-in to additional content.</p>
+        </div>
+      </div>
+    </div>
+    <div class="col-sm-3">
+      <div class="card">
+        <img class="card-img-top" src="https://www.cancer.org/content/dam/cancer-org/images/photographs/single-use/espresso-coffee-cup-with-beans-on-table-restricted.jpg/jcr:content/renditions/cq5dam.web.1280.1280.jpeg" alt="Card image cap">
+        <div class="card-body">
+          <h2 class="card-title">Product 2</h2>
+          <p class="card-text">With supporting text below as a natural lead-in to additional content.</p>
+        </div>
+      </div>
+    </div>
+    <div class="col-sm-3">
+        <div class="card">
+            <img class="card-img-top" src="https://www.cancer.org/content/dam/cancer-org/images/photographs/single-use/espresso-coffee-cup-with-beans-on-table-restricted.jpg/jcr:content/renditions/cq5dam.web.1280.1280.jpeg" alt="Card image cap">
+          <div class="card-body">
+            <h2 class="card-title">Product 3</h2>
+            <p class="card-text">With supporting text below as a natural lead-in to additional content.</p>
+          </div>
+        </div>
+      </div>
+  </div>
