--- a/src/app/product-component/product-component.component.html
+++ b/src/app/product-component/product-component.component.html
@@ -1,29 +1,31 @@
+<div class = "container-sm">
 <div class="row">
-    <div class="col-sm-3">
+    <div class="col-sm-4">
       <div class="card">
         <img class="card-img-top" src="https://www.cancer.org/content/dam/cancer-org/images/photographs/single-use/espresso-coffee-cup-with-beans-on-table-restricted.jpg/jcr:content/renditions/cq5dam.web.1280.1280.jpeg" alt="Card image cap">
         <div class="card-body">
           <h2 class="card-title">Product 1</h2>
-          <p class="card-text">With supporting text below as a natural lead-in to additional content.</p>
+          <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit</p>
         </div>
       </div>
     </div>
-    <div class="col-sm-3">
+    <div class="col-sm-4">
       <div class="card">
         <img class="card-img-top" src="https://www.cancer.org/content/dam/cancer-org/images/photographs/single-use/espresso-coffee-cup-with-beans-on-table-restricted.jpg/jcr:content/renditions/cq5dam.web.1280.1280.jpeg" alt="Card image cap">
         <div class="card-body">
           <h2 class="card-title">Product 2</h2>
-          <p class="card-text">With supporting text below as a natural lead-in to additional content.</p>
+          <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit</p>
         </div>
       </div>
     </div>
-    <div class="col-sm-3">
+    <div class="col-sm-4">
         <div class="card">
             <img class="card-img-top" src="https://www.cancer.org/content/dam/cancer-org/images/photographs/single-use/espresso-coffee-cup-with-beans-on-table-restricted.jpg/jcr:content/renditions/cq5dam.web.1280.1280.jpeg" alt="Card image cap">
           <div class="card-body">
             <h2 class="card-title">Product 3</h2>
-            <p class="card-text">With supporting text below as a natural lead-in to additional content.</p>
+            <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit</p>
           </div>
         </div>
       </div>
   </div>
+</div>
