--- a/src/app/header-component/header-component.component.html
+++ b/src/app/header-component/header-component.component.html
@@ -1,15 +1,9 @@
 <ul ngbNav #nav="ngbNav" class="nav-tabs">
     <li ngbNavItem id="brand">
         <a ngbNavLink>BrandName</a>
-    </li>     
-    <li ngbNavItem>
-        <a ngbNavLink>Home</a>
-    </li>
-  <li ngbNavItem>
-    <a ngbNavLink>Products</a>
-  </li>
-  <li ngbNavItem>
-    <a ngbNavLink>Contact</a>
-  </li>
+    </li> 
+    <li ngbNavItem id="brand" *ngFor="let item of urls">
+      <a routerLink="item.route" routerLinkActive="active" routerLinkActiveOptions="{exact: true}">{{ item.name}}</a>
+  </li>       
 </ul>
 <div [ngbNavOutlet]="nav"></div>
